--- a/style.css
+++ b/style.css
@@ -1,3 +1,52 @@
 body {
-    background-color: pink;
+    background-color: #ffc0cb;
+}
+h1 {
+    text-align: center;
+    color: #333;
+}
+#gameMenu {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+    flex-direction: column;
+    border: 2px solid black;
+}
+button {
+    background-color: #c48ee4;
+    color: #fff;
+    width: 10em;
+    font-size: 16px;
+    padding: 10px 20px;
+    margin: 5px;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+}
+button:hover {
+    background-color: #bda8ca;
+}
+.popup-content {
+    background-color: #f5e0f1;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+}
+input {
+    height: 30px;
+}
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    height: 30px; /* Adjust the height of the up/down buttons */
+    /* To style the up/down buttons of an input with type="number," you can use the ::-webkit-inner-spin-button and ::-webkit-outer-spin-button pseudo-elements */
+}
+.close {
+    position: absolute;
+    bottom: 422px;
+    right: 777px;
+    font-size: 40px;
+    color: #333;
+    cursor: pointer;
 }
