--- a/style.css
+++ b/style.css
@@ -2,9 +2,13 @@ body {
     background-color: #ffc0cb;
 }
 h1 {
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
     text-align: center;
     color: #333;
     font-family: 'Comic Sans MS', cursive;
+    font-size: 2em;
 }
 h2 {
     font-family: 'Comic Sans MS', cursive;
@@ -55,62 +59,43 @@ input[type="number"]::-webkit-outer-spin-button {
     color: #333;
     cursor: pointer;
 }
-@keyframes cascadeBounce {
+@keyframes pingPongEffect {
     0%, 100% {
-        transform: translateY(0);
+        transform: translateX(0) rotate(0);
     }
-    15% {
-        transform: translateY(-15px);
+    20% {
+        transform: translateX(-10px) rotate(-20deg);
     }
-    30% {
-        transform: translateY(0);
+    30%, 70% {
+        transform: translateX(10px) rotate(20deg);
     }
-    45% {
-        transform: translateY(-25px);
+    80% {
+        transform: translateX(-10px) rotate(-20deg);
     }
-    60% {
-        transform: translateY(0);
-    }
-    75% {
-        transform: translateY(-20px);
-    }
-    90% {
-        transform: translateY(0);
-    }
-}
-h1 {
-    display: inline-block;
-    font-size: 2em;
 }
 h1 span {
     display: inline-block;
+    animation: pingPongEffect 2s ease-in-out 1;
+}
+h1 span:nth-child(1), h1 span:nth-child(2), h1 span:nth-child(3), h1 span:nth-child(4), h1 span:nth-child(5), h1 span:nth-child(6), h1 span:nth-child(7), h1 span:nth-child(8) {
+    display: inline-block;
     animation: cascadeBounce 2s infinite;
 }
-h1 span:nth-child(1) {
-    animation: cascadeBounce 2s infinite 0.1s;
-    -webkit-animation: cascadeBounce 2s infinite 0.1s;
+@keyframes cascadeBounce {
+    0% {
+        transform: translateY(0);
+    }
+    25% {
+        transform: translateY(-20px);
+    }
+    50% {
+        transform: translateY(0);
+    }
+    75% {
+        transform: translateY(-10px);
+    }
+    100% {
+        transform: translateY(0);
+    }
 }
-h1 span:nth-child(2) {
-    animation: cascadeBounce 2s infinite 0.2s;
-    -webkit-animation: cascadeBounce 2s infinite 0.2s;
-}
-h1 span:nth-child(3) {
-    animation: cascadeBounce 2s infinite 0.3s;
-    -webkit-animation: cascadeBounce 2s infinite 0.3s;
-}
-h1 span:nth-child(4) {
-    animation: cascadeBounce 2s infinite 0.4s;
-    -webkit-animation: cascadeBounce 2s infinite 0.4s;
-}
-h1 span:nth-child(5) {
-    animation: cascadeBounce 2s infinite 0.5s;
-    -webkit-animation: cascadeBounce 2s infinite 0.5s;
-}
-h1 span:nth-child(6) {
-    animation: cascadeBounce 2s infinite 0.6s;
-    -webkit-animation: cascadeBounce 2s infinite 0.6s;
-}
-h1 span:nth-child(7) {
-    animation: cascadeBounce 2s infinite 0.7s;
-    -webkit-animation: cascadeBounce 2s infinite 0.7s;
-}
+
