--- a/style.css
+++ b/style.css
@@ -43,6 +43,9 @@ button:hover {
     border-radius: 5px;
     text-align: center;
 }
+#optionsPopup {
+    display: none;
+}
 input {
     height: 30px;
 }
@@ -59,6 +62,34 @@ input[type="number"]::-webkit-outer-spin-button {
     color: #333;
     cursor: pointer;
 }
+#toggleMusicBtn {
+    background-color: #d06848;
+    color: #fff;
+    width: 10em;
+    font-size: 16px;
+    padding: 10px 20px;
+    margin: 5px;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+}
+#toggleMusicBtn:hover {
+    background-color: #d28168;
+}
+#volumeControl {
+    margin-top: 20px;
+}
+#volumeContainer {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-between; */
+    align-items: center;
+}
+
+
+
+
+
 @keyframes pingPongEffect {
     0%, 100% {
         transform: translateX(0) rotate(0);
