--- a/style.css
+++ b/style.css
@@ -7,11 +7,12 @@ h1 {
     align-items: center; */
     text-align: center;
     color: #333;
-    font-family: 'Comic Sans MS', cursive;
+    font-family: 'Titan One', sans-serif;
     font-size: 2em;
 }
 h2 {
-    font-family: 'Comic Sans MS', cursive;
+    font-family: 'Saira Semi Condensed', sans-serif;
+    font-weight: 40px;
     color: #333;
 }
 #gameMenu {
@@ -46,6 +47,12 @@ button:hover {
 #optionsPopup {
     display: none;
 }
+label[for="totalLives"] {
+    color: black;
+    font-size: 16px;
+    font-family: 'Saira Semi Condensed', sans-serif;
+    font-weight: 40px;
+}
 input {
     height: 30px;
 }
@@ -56,8 +63,8 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 .close {
     position: absolute;
-    bottom: 488px;
-    right: 777px;
+    bottom: 679px;
+    right: 730px;
     font-size: 40px;
     color: #333;
     cursor: pointer;
@@ -85,11 +92,6 @@ input[type="number"]::-webkit-outer-spin-button {
     /* justify-content: space-between; */
     align-items: center;
 }
-
-
-
-
-
 @keyframes pingPongEffect {
     0%, 100% {
         transform: translateX(0) rotate(0);
