--- a/home.css
+++ b/home.css
@@ -15,6 +15,16 @@ h2 {
     font-weight: 40px;
     color: #333;
 }
+/* #imageBackground {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    z-index: -1;
+} */
 #gameMenu {
     display: flex;
     text-align: center;
