--- a/home.css
+++ b/home.css
@@ -16,9 +16,9 @@ h2 {
     font-size: 30px;
     color: #333;
 }
-#main-container {
+/* #main-container {
     border: 2px solid blue;
-}
+} */
 .gameMenu {
     margin-bottom: -2px;
 }
