Fix ball/paddle position and collision calculations.

--- a/game.css
+++ b/game.css
@@ -33,6 +33,7 @@ body {
     position: relative;
   }
   .cat-paddle {
+    height: 130px;
     display: flex;
     justify-content: center;
     align-items: center;
